<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kenstott</groupId>
    <artifactId>calcite-rs-jni</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-file</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/file/build/libs/calcite-file-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-linq4j</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/linq4j/build/libs/calcite-linq4j-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-druid</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/druid/build/libs/calcite-druid-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-elasticsearch</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/elasticsearch/build/libs/calcite-elasticsearch-1.38.0-SNAPSHOT.jar
            </systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-csv</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/example/csv/build/libs/calcite-csv-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-cassandra</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/cassandra/build/libs/calcite-cassandra-1.38.0-SNAPSHOT.jar
            </systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-redis</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/redis/build/libs/calcite-redis-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-pig</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/pig/build/libs/calcite-pig-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-geode</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/geode/build/libs/calcite-geode-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-spark</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/spark/build/libs/calcite-spark-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-mongodb</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/mongodb/build/libs/calcite-mongodb-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-arrow</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/arrow/build/libs/calcite-arrow-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-innodb</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/innodb/build/libs/calcite-innodb-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-splunk</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/splunk/build/libs/calcite-splunk-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite.avatica</groupId>
            <artifactId>avatica-core</artifactId>
            <version>1.25.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-kafka</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/kafka/build/libs/calcite-kafka-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-api</artifactId>
            <version>1.40.0</version>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-sdk-extension-autoconfigure</artifactId>
            <version>1.40.0</version>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-exporter-otlp</artifactId>
            <version>1.40.0</version>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-exporter-logging</artifactId>
            <version>1.40.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.calcite</groupId>
            <artifactId>calcite-core</artifactId>
            <version>1.38.0-SNAPSHOT</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/calcite/core/build/libs/calcite-core-1.38.0-SNAPSHOT.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.23.1</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.12.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <version>2.9.0</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.locationtech.jts</groupId>
            <artifactId>jts-core</artifactId>
            <version>1.18.1</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.janino</groupId>
            <artifactId>janino</artifactId>
            <version>3.1.6</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.10.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-vector</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-format</artifactId>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>org.apache.arrow</groupId>-->
        <!--            <artifactId>arrow-memory</artifactId>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.apache.arrow.gandiva</groupId>
            <artifactId>arrow-gandiva</artifactId>
            <version>17.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-memory-netty</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.arrow</groupId>
            <artifactId>arrow-compression</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>2.3</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-buffer</artifactId>
            <version>4.1.111.Final</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.36</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.111.Final</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc10</artifactId>
            <version>19.3.0.0</version>
        </dependency>
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-jdbc</artifactId>
            <version>453</version>
        </dependency>
        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <version>12.6.3.jre11</version>
        </dependency>
        <!--        <dependency>-->
        <!--            <groupId>com.clickhouse</groupId>-->
        <!--            <artifactId>clickhouse-jdbc</artifactId>-->
        <!--            <version>0.6.0-patch4</version>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>com.ibm.db2</groupId>
            <artifactId>jcc</artifactId>
            <version>11.5.9.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.derby</groupId>
            <artifactId>derby</artifactId>
            <version>10.16.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.datastax.oss</groupId>
            <artifactId>java-driver-core</artifactId>
            <version>4.17.0</version>
        </dependency>
        <dependency>
            <groupId>com.datastax.oss</groupId>
            <artifactId>java-driver-query-builder</artifactId>
            <version>4.17.0</version>
        </dependency>
        <dependency>
            <groupId>com.datastax.oss</groupId>
            <artifactId>java-driver-mapper-runtime</artifactId>
            <version>4.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.cassandra</groupId>
            <artifactId>cassandra-all</artifactId>
            <version>4.1.3</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.2</version>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.41.2.2</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>3.8.0</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.200</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hive</groupId>
            <artifactId>hive-jdbc</artifactId>
            <version>3.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.hsqldb</groupId>
            <artifactId>hsqldb</artifactId>
            <version>2.5.1</version>
        </dependency>
        <dependency>
            <groupId>com.amazon.redshift</groupId>
            <artifactId>redshift-jdbc42</artifactId>
            <version>2.1.0.29</version>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-semconv</artifactId>
            <version>1.20.0-alpha</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>jdk.tools</groupId>
            <artifactId>jdk.tools</artifactId>
            <version>1.8</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/jars/tools.jar</systemPath>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.opentelemetry</groupId>
                <artifactId>opentelemetry-bom</artifactId>
                <version>1.40.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.arrow</groupId>
                <artifactId>arrow-bom</artifactId>
                <version>17.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.0</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <argLine>
                        --add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED
                        -Dotel.java.global-autoconfigure.enabled=true
                        -Dlog_level=DEBUG
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>

